overflow x fixed

--- a/style.css
+++ b/style.css
@@ -355,7 +355,7 @@ textarea:focus {
 
     #contenedor-mensaje{
         background-color: white;
-        width: 90%;
+        width: 80%;
         height: auto;
         border-radius: 32px;
         box-shadow: 0px 24px 32px -8px #00000014;
